test/MC/SVE/regression-tests/negative_tests/sve-ldnt1w-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU32CLoadNT4LSSZ
// Offset register Rm cannot be xzr
ldnt1w z30.s, p5/z, [x21, xzr, lsl #2]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
